add: delete and update operations

--- a/challenge2/package.json
+++ b/challenge2/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "mongoose": "^8.9.2",
     "next": "15.1.2",
     "react": "^19.0.0",
