--- a/challenge2/package.json
+++ b/challenge2/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "dotenv": "^16.4.7",
+    "@langchain/community": "^0.3.19",
+    "@langchain/core": "^0.3.26",
+    "@langchain/ollama": "^0.1.4",
+    "langchain": "^0.3.7",
+    "lucide-react": "^0.469.0",
     "mongoose": "^8.9.2",
     "next": "15.1.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "postcss": "^8",
